objects/ssot__AbnExperimentLog__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AbnExperimentCohortId__c</fullName>
        <label>Experiment Cohort</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AbnExperimentId__c</fullName>
        <label>Experiment</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Abn Experiment Log Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Individualid__c</fullName>
        <label>Individual</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationDecisionId__c</fullName>
        <label>Personalization Decision</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationId__c</fullName>
        <label>Personalization Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationPointId__c</fullName>
        <label>Personalization Point</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PoolAssignmentNumber__c</fullName>
        <label>Pool Assignment</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RequestDatetime__c</fullName>
        <label>Request Datetime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Requestid__c</fullName>
        <label>Request id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TrackingKeyText__c</fullName>
        <label>Tracking Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TreatmentValueText__c</fullName>
        <label>Treatment Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UnifiedIndividualId__c</fullName>
        <label>Unified Individual</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720764837801_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AbnExperimentLog_Individualid_map_In_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>AbnExperimentLog_Individualid_map_In_rel</relationshipLabel>
        <relationshipName>rel_1720764837801_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720842258592_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AbnExperimentLog_PersonalizationDeci_rel</label>
        <referenceTo>ssot__PersonalizationDecision__dlm</referenceTo>
        <relationshipLabel>AbnExperimentLog_PersonalizationDeci_rel</relationshipLabel>
        <relationshipName>rel_1720842258592_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720842262576_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AbnExperimentLog_PersonalizationPoin_rel</label>
        <referenceTo>ssot__PersonalizationPoint__dlm</referenceTo>
        <relationshipLabel>AbnExperimentLog_PersonalizationPoin_rel</relationshipLabel>
        <relationshipName>rel_1720842262576_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>